--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,12 @@ li {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-
+  align-items: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  padding: 0px 20px;
+  justify-content: center;
 }
