--- a/src/Components/AllProducts/style.css
+++ b/src/Components/AllProducts/style.css
@@ -1,6 +1,6 @@
 .AllProducts {
-  width: 100%;
-  max-width: 1000px;
+  width: 90%;
+  max-width: 800px;
   background-color: #ffffff;
   color: #000000;
   border-radius: 3px;
@@ -11,4 +11,7 @@
   justify-content: flex-start;
   gap: 10px;
   padding: 10px;
+}
+.AllProducts h1 {
+  flex-basis: 100%;
 }
